app/javascript/src/styles/specific/users.scss
.user-greeting-outer {
  padding: $padding-025 0 $padding-025;
  span.user-greeting {
    color: $user-home-greeting-color;
    cursor: help;
  }
}

div#c-users {
  div#a-show {

    display: flex;
    flex-flow: column;
    gap: 1em;

    & > div {
      max-width: 1600px;
      box-sizing: border-box;
    }

    // Top section: stats and whatnot
    .stats-section {
      display: flex;
      flex-flow: column;

      // Mobile
      @include window-larger-than(800px) {
        flex-flow: row;
      }

      .profile-avatar .post-thumbnail {
        margin: 0 1em 1em 0;
      }

      .profile-stats {
        width: 100%;
        padding: 0 0.5em;
        box-sizing: border-box; // padding overflows the page otherwise
        border-radius: $border-radius-full;
        background: themed("color-section");

        abbr {
          cursor: help;
        }
      }
    }

    .user-statistics {
      display: grid;
      grid-template-columns: 1fr;

      // Mobile
      @include window-larger-than(800px) {
        grid-template-columns: 1fr 1fr;
      }

      .column {
        display: grid;
        grid-template-columns: max-content minmax(150px, 1fr);
        grid-auto-rows: minmax(1.75em, max-content);
        column-gap: 1em;

        > span:nth-child(odd) {
          font-weight: bold;
          text-align: right;
        }
      }
    }

    .staff-notes-section {
      details { margin-bottom: 0; }
    }


    // Middle section: uploads and favorites
    .blacklist-section {
      .blacklist-ui { padding: 0; }
    }

    .posts-section {
      display: flex;
      flex-flow: column;
      gap: 1em;

      .profile-sample {
        display: grid;
        grid-template: "p-header p-links"
                       "p-posts p-posts";
        grid-template-columns: auto 1fr;
        gap: 0 0.5em;

        // Entries with more than one button need this
        // to properly collapse on mobile
        &.collapsable {
          grid-template: "p-header"
                         "p-links"
                         "p-posts";
          grid-template-columns: 1fr;
          gap: 0.5em 0.5em;

          .profile-sample-header a {
            border-radius: 6px;
          }
        }

        // Desktop
        @include window-larger-than(800px) {
          &.collapsable {
            grid-template: "p-header p-links"
                          "p-posts p-posts";
            grid-template-columns: auto 1fr;
            gap: 0 0.5em;

            .profile-sample-header a {
              border-radius: 6px 6px 0 0;
            }
          }
        }
      }

      .profile-sample-header a, .profile-sample-links a {
        background-color: themed("color-section");
        height: min-content;
        border-radius: 6px;

        &:hover {
          background-color: themed("color-section-lighten-5");
        }
        &:focus, &:active {
          outline: 0;
          color: themed("color-link-active");
        }
      }

      .profile-sample-header {
        grid-area: p-header;
        display: flex;

        a {
          padding: 0.5em 0.75em;
          border-radius: 6px 6px 0 0;

          font-size: 1.125em;
          min-width: 5rem;  // Ensure that both labels are the same width
          text-align: center;
          font-weight: bold;
        }
      }

      .profile-sample-links {
        grid-area: p-links;
        display: flex;
        flex-wrap: wrap;
        
        gap: 0.5em;

        a {
          padding: 0.4em;
        }
      }

      .profile-sample-posts {
        grid-area: p-posts;
        display: flex;
        overflow: auto;
        justify-content: space-evenly;
        flex-wrap: wrap;

        gap: 0.5em;
        padding: 0.5em;

        background: var(--color-section);
        border-radius: 0 6px 6px 6px;

        // Desktop
        @include window-larger-than(800px) {
          flex-wrap: nowrap;
        }

        article.post-preview {
          flex: 0 0 150px;
          margin: 0;
          img { max-width: unset !important; }
        }
      }
    }


    // Bottom section: about me and commission info
    .about-section {
      display: flex;
      flex-flow: column;
      gap: 0.5em;

      // Mobile
      @include window-larger-than(800px) {
        flex-flow: row;
      }

      .profile-about-entry {
        flex-grow: 1;
        flex-basis: 50%;

        background-color: themed("color-section");
        border-radius: 6px;
        padding: 0.5em;
      }
    }
  }

  div#a-edit {
    h1 {
      margin: 0.5em 0;
    }

    h2 {
      margin: 0.5em 0;
    }

    div.input {
      margin-bottom: 2em;
    }

    div.input span.hint {
      display: block;
      max-width: 70%;
    }

    .active {
      color: themed("color-link-active");
    }
  }

  div#a-new {
    max-width: 60em;

    p {
      font-size: 1.2em;
      line-height: 1.4em;
    }
  }
}

